# OnceUponATime

./: .gitignore  Dockerfile.prod  README.md  docker-compose.yml  manage.py  package-lock.json  pyproject.toml
.config/: Caddyfile  supervisord.conf
book/: admin.py  models.py  services.py  urls.py  views.py
book/migrations/: 0001_initial.py  0002_tag_alter_page_audio_book_tags.py  0003_alter_book_tags.py
book/templates/: base.html
book/tests/: factories.py  test_services.py  test_views.py
documentary/: admin.py  models.py  views.py
documentary/migrations/: 0001_initial.py  0002_documentary_audio_documentary_published_and_more.py
lidzee/: asgi.py  settings.py  urls.py  wsgi.py
onceuponatime/: asgi.py  settings.py  urls.py  wsgi.py
parler/: settings.py  urls.py
static/: styles.css
static/svelte/: book_detail.js  disclose-version-C217dOyM.js  disclose-version-mPVtRhrL.js  disclose-version-vnJr-nxA.js  dock.js  dock_data.svelte-B9YFbdbi.js  dock_data.svelte-CSo1fuPg.js  dock_data.svelte-CaICinbO.js  dock_data.svelte-CfL4SXtD.js  dock_data.svelte-CqI7yPRU.js  dock_data.svelte-D8xrDy0e.js  dock_data.svelte-d85s_x5M.js  dock_data.svelte-vErJFzPP.js  documentary_list.js  each-B6yZeq2V.js  each-BMTP-u2y.js  each-BcYxHjQE.js  each-DAc8Takx.js  each-DKbWlts3.js  index.esm.svelte-BzAfiaG2.js  props-ChWU9M4D.js  props-eMNCbMX0.js  props-slmf16vM.js  swiper.js
svelte/: package-lock.json  package.json  vite.config.js
svelte/src/: BookDetail.svelte  Dock.svelte  DocumentaryCard.svelte  Swiper.svelte  auth_style.css  dock.js  dock_data.svelte.js  style.css  (+2 more)
(+8 files in other folders)
