[project]
name = "onceuponatime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.8",
    "django-allauth[socialaccount]>=65.13.1",
    "django-pwa>=2.0.1",
    "factory-boy>=3.3.3",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.2.13",
    "redis>=7.1.0",
]
